fix: overflow

--- a/biblioX/src/styles.scss
+++ b/biblioX/src/styles.scss
@@ -13,6 +13,9 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  height: 100%;
 }
 
 body {
